--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-new-window": "^1.0.1",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5",
