--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@apidevtools/swagger-parser": "^10.1.0",
     "@jest/globals": "^29.7.0",
     "@openapitools/openapi-generator-cli": "^2.13.1",
     "@testing-library/jest-dom": "^6.4.2",
@@ -40,12 +41,14 @@
     "@vitejs/plugin-react": "^4.2.1",
     "acorn": "^8.5.0",
     "ajv": "^8.12.0",
+    "axios-mock-adapter": "^1.22.0",
     "eslint-plugin-react": "^7.28.0",
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "less": "^3.9.0",
     "less-loader": "^10.0.1",
+    "openapi-axios-mock-adapter": "^0.0.4",
     "openapi-merge-cli": "^1.3.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
@@ -82,10 +85,11 @@
     "build": "vite build",
     "clean-files": "rm -rf ./output.swagger.json ./src/types/api",
     "eject": "react-scripts eject",
+    "generate-axios-mock-adapter": "node src/__tests__/utils/generate-axios-mock-adapter.ts -i build/openapi/output.swagger.json -o src/__fixtures__/ -h https://kwops-1eec53f28fce.herokuapp.com/api",
     "generate-openapi": "npm run clean-files && npm run merge-openapi && openapi-generator-cli generate",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
     "merge-openapi": "npx openapi-merge-cli",
-    "test": "npm run generate-openapi && npm run lint && npm run ts:check && npm run test:only",
+    "test": "npm run generate-openapi && npm run generate-axios-mock-adapter && npm run lint && npm run ts:check && npm run test:only",
     "test:only": "jest --runInBand --detectOpenHandles --forceExit",
     "ts:check": "npx tsc --skipLibCheck"
   },
