--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/node": "^16.18.93",
     "@types/jest": "^29.5.11",
+    "@types/node": "^16.18.93",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -46,6 +46,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "less": "^3.9.0",
     "less-loader": "^10.0.1",
+    "openapi-axios-mock-adapter": "^0.0.4",
     "openapi-merge-cli": "^1.3.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
