--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "build": "vite build",
     "clean-files": "rm -rf ./output.swagger.json ./src/types/api",
     "eject": "react-scripts eject",
-    "generate-openapi": "npm run clean-files && npm run merge-openapi && openapi-generator-cli generate",
+    "prepare-generate": "npm run clean-files && npm run merge-openapi",
+    "generate-openapi": "openapi-generator-cli generate",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
     "merge-openapi": "npx openapi-merge-cli",
     "test": "npm run generate-openapi && npm run lint && npm run ts:check && npm run test:only",
